# cbt

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/uname/: uname  uname.c
examples/vfs_file_creation/: main  main.c
src/: CbtBinary.cc  CbtBinary.h  main.cpp
src/emulator/instruction/: InstructionEmulator.cc  InstructionEmulator.h
src/emulator/instruction/data/: BtInstructionEmulator.cc  BtInstructionEmulator.h  CdqeInstructionEmulator.cc  CdqeInstructionEmulator.h  CmpInstructionEmulator.cc  CmpInstructionEmulator.h  LeaInstructionEmulator.cc  LeaInstructionEmulator.h  MovInstructionEmulator.cc  MovInstructionEmulator.h  MovsxInstructionEmulator.cc  MovsxInstructionEmulator.h  MovsxdInstructionEmulator.cc  MovsxdInstructionEmulator.h  MovzxInstructionEmulator.cc  MovzxInstructionEmulator.h  TestInstructionEmulator.cc  TestInstructionEmulator.h
src/emulator/instruction/data/conditional/: CmovbInstructionEmulator.cc  CmovbInstructionEmulator.h  CmovbeInstructionEmulator.cc  CmovbeInstructionEmulator.h  CmovlInstructionEmulator.cc  CmovlInstructionEmulator.h  CmovleInstructionEmulator.cc  CmovleInstructionEmulator.h  CmovnbeInstructionEmulator.cc  CmovnbeInstructionEmulator.h  CmovnlInstructionEmulator.cc  CmovnlInstructionEmulator.h  CmovnleInstructionEmulator.cc  CmovnleInstructionEmulator.h  CmovnoInstructionEmulator.cc  CmovnoInstructionEmulator.h  CmovnpInstructionEmulator.cc  CmovnpInstructionEmulator.h  CmovnsInstructionEmulator.cc  CmovnsInstructionEmulator.h  CmovnzInstructionEmulator.cc  CmovnzInstructionEmulator.h  CmovoInstructionEmulator.cc  CmovoInstructionEmulator.h  CmovpInstructionEmulator.cc  CmovpInstructionEmulator.h  CmovsInstructionEmulator.cc  CmovsInstructionEmulator.h  CmovzInstructionEmulator.cc  CmovzInstructionEmulator.h  SetnzInstructionEmulator.cc  SetnzInstructionEmulator.h
src/emulator/instruction/data/logical/: AndInstructionEmulator.cc  AndInstructionEmulator.h  NegInstructionEmulator.cc  NegInstructionEmulator.h  NotInstructionEmulator.cc  NotInstructionEmulator.h  OrInstructionEmulator.cc  OrInstructionEmulator.h  SarInstructionEmulator.cc  SarInstructionEmulator.h  ShlInstructionEmulator.cc  ShlInstructionEmulator.h  ShrInstructionEmulator.cc  ShrInstructionEmulator.h  XorInstructionEmulator.cc  XorInstructionEmulator.h
src/emulator/instruction/data/math/: AddInstrucionEmulator.cc  AddInstrucionEmulator.h  DecInstructionEmulator.cc  DecInstructionEmulator.h  IncInstructionEmulator.cc  IncInstructionEmulator.h  MulInstructionEmulator.cc  MulInstructionEmulator.h  SubInstructionEmulator.cc  SubInstructionEmulator.h
src/emulator/instruction/flow/: CallInstructionEmulator.cc  CallInstructionEmulator.h  JmpInstructionEmulator.cc  JmpInstructionEmulator.h  RetInstructionEmulator.cc  RetInstructionEmulator.h  SyscallInstructionEmulator.cc  SyscallInstructionEmulator.h
src/emulator/instruction/flow/conditional/: JbInstructionEmulator.cc  JbInstructionEmulator.h  JbeInstructionEmulator.cc  JbeInstructionEmulator.h  JlInstructionEmulator.cc  JlInstructionEmulator.h  JleInstructionEmulator.cc  JleInstructionEmulator.h  JnbInstructionEmulator.cc  JnbInstructionEmulator.h  JnbeInstructionEmulator.cc  JnbeInstructionEmulator.h  JnlInstructionEmulator.cc  JnlInstructionEmulator.h  JnleInstructionEmulator.cc  JnleInstructionEmulator.h  JnsInstructionEmulator.cc  JnsInstructionEmulator.h  JnzInstructionEmulator.cc  JnzInstructionEmulator.h  JoInstructionEmulator.cc  JoInstructionEmulator.h  JsInstructionEmulator.cc  JsInstructionEmulator.h  JzInstructionEmulator.cc  JzInstructionEmulator.h
src/emulator/instruction/special/: Endbr32InstructionEmulator.cc  Endbr32InstructionEmulator.h  Endbr64InstructionEmulator.cc  Endbr64InstructionEmulator.h  NopInstructionEmulator.cc  NopInstructionEmulator.h
src/emulator/syscall/: SyscallEmulator.cc  SyscallEmulator.h
src/emulator/syscall/io/: CloseSyscallEmulator.cc  CloseSyscallEmulator.h  FcntlSyscallEmulator.cc  FcntlSyscallEmulator.h  Getdents64SyscallEmulator.cc  Getdents64SyscallEmulator.h  IoctlSyscallEmulator.cc  IoctlSyscallEmulator.h  OpenSyscallEmulator.cc  OpenSyscallEmulator.h  ReadSyscallEmulator.cc  ReadSyscallEmulator.h  WritevInstructionEmulator.cc  WritevInstructionEmulator.h
src/emulator/syscall/memory/: BrkSyscallEmulator.cc  BrkSyscallEmulator.h  MmapSyscallEmulator.cc  MmapSyscallEmulator.h  MprotectSyscallEmulator.cc  MprotectSyscallEmulator.h  MunmapSyscallEmulator.cc  MunmapSyscallEmulator.h
src/emulator/syscall/process/: ArchPrctlSyscallEmulator.cc  ArchPrctlSyscallEmulator.h  ExitGroupSyscallEmulator.cc  ExitGroupSyscallEmulator.h  RseqSyscallEmulator.cc  RseqSyscallEmulator.h  SetRobustListSyscallEmulator.cc  SetRobustListSyscallEmulator.h  SetTidAddressSyscallEmulator.cc  SetTidAddressSyscallEmulator.h
src/emulator/syscall/stat/: GetegidSyscallEmulator.cc  GetegidSyscallEmulator.h  GeteuidSyscallEmulator.cc  GeteuidSyscallEmulator.h  GetgidSyscallEmulator.cc  GetgidSyscallEmulator.h  GetuidSyscallEmulator.cc  GetuidSyscallEmulator.h  UnameSyscallEmulator.cc  UnameSyscallEmulator.h
src/execution/: BasicBlock.cc  BasicBlock.h  BasicBlockAllocator.cc  BasicBlockAllocator.h  BasicBlockDecoder.cc  BasicBlockDecoder.h  EmulatorMap.h  ExecutionThread.cc  ExecutionThread.h  FileDescriptorTable.cc  FileDescriptorTable.h  ProcessState.h  StackInitializer.cc  StackInitializer.h
src/generator/: ContextSwitchGenerator.cc  ContextSwitchGenerator.h
src/interception/: SyscallId.h  SyscallInterceptor.cc  SyscallInterceptor.h  VfsAccessInterceptor.cc  VfsAccessInterceptor.h
src/linker/: ElfLoader.cc  ElfLoader.h  LinuxOpenedFile.cc  LinuxOpenedFile.h
src/network/: IdaTracingPluginServer.cc  IdaTracingPluginServer.h
src/util/: Option.h  Result.h
src/virtualization/fs/: VfsDirectory.cc  VfsDirectory.h  VfsEntry.cc  VfsEntry.h  VfsFile.cc  VfsFile.h  VfsRoot.cc  VfsRoot.h
